--- a/src/App.css
+++ b/src/App.css
@@ -31,3 +31,19 @@
     transform: rotate(360deg);
   }
 }
+
+.first-title {
+  margin-top: 15px;
+  margin-bottom: 15px;
+  color: black;
+  font-size: 3rem;
+}
+.second-title {
+  color: #fe4e4e;
+  font-size: 1rem;
+}
+.title-caption {
+  margin-top: 0;
+  font-size: 1rem;
+  line-height: 1.5rem;
+}
