--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,5 @@
+@import "~include-media/dist/_include-media.scss";
+
 .App {
   text-align: center;
 }
@@ -42,8 +44,19 @@
   color: #fe4e4e;
   font-size: 1rem;
 }
+
 .title-caption {
   margin-top: 0;
   font-size: 1rem;
   line-height: 1.5rem;
 }
+
+.flex-container {
+  display: flex;
+  flex-direction: row;
+  @include media("<tablet") {
+    flex-direction: column;
+  }
+}
+
+// @include media("<=phone", ">phone","<=tablet",">tablet","<desktop")
