--- a/src/components/LeaderCard/LeaderCard.scss
+++ b/src/components/LeaderCard/LeaderCard.scss
@@ -19,4 +19,22 @@
     height: auto;
     width: 100%;
   }
+
+  .detail-enter {
+    opacity: 0;
+    transform: scale(0.9);
+  }
+  .detail-enter-active {
+    opacity: 1;
+    transform: translateX(0);
+    transition: opacity 300ms, transform 300ms;
+  }
+  .detail-exit {
+    opacity: 1;
+  }
+  .detail-exit-active {
+    opacity: 0;
+    transform: scale(0.9);
+    transition: opacity 300ms, transform 300ms;
+  }
 }
