--- a/src/sections/Intro/Intro.scss
+++ b/src/sections/Intro/Intro.scss
@@ -1,3 +1,5 @@
+@import "~include-media/dist/_include-media.scss";
+
 .Intro {
   width: 98%;
   margin: 0 auto;
@@ -10,9 +12,18 @@
   &-description {
     width: 50%;
     margin: auto;
+
+    @include media("<=tablet") {
+      width: 80%;
+    }
+
     img {
       width: 100px;
       margin-top: 100px;
+
+      @include media("<=tablet") {
+        margin-top: 0px;
+      }
     }
     p {
       color: white;
