--- a/src/sections/Vision/Vision.scss
+++ b/src/sections/Vision/Vision.scss
@@ -1,5 +1,6 @@
-.Purpose {
+.Vision {
   height: auto;
+  background: linear-gradient(180deg, #f3d2cb 0%, #f3e0d9 54.69%, #f7f4ef 100%);
   &-detail {
     display: flex;
 
@@ -26,11 +27,27 @@
     }
 
     &-image {
+      position: relative;
       padding-top: 100px;
       padding-bottom: 100px;
-      img {
-        width: 65%;
+      flex: 1;
+      .bubbleunicorn1,
+      .bubbleunicorn2 {
+        position: absolute !important;
       }
+
+      .bubbleunicorn1 {
+        right: 20%;
+        top: 10%;
+      }
+
+      .bubbleunicorn2 {
+        bottom: 25%;
+        left: 20%;
+      }
+      //   img {
+      //     width: 65%;
+      //   }
     }
   }
 }
