--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,32 +1,36 @@
 .nav {
   &-container {
-    height: 80px;
+    height: auto;
     background-color: white;
-    display: flex;
     justify-content: space-between;
   }
 
   &-logo {
-    width: 100px;
-    padding-left: 80px;
     a {
       height: auto;
     }
     img {
       padding-top: 20px;
+      width: 100px;
     }
   }
 
   &-main {
-    flex: 8;
     display: flex;
     flex-direction: row-reverse;
     padding-right: 80px;
     a {
-      padding-top: 30px;
-      padding-left: 30px;
+      margin-top: 30px;
+      margin-left: 30px;
       text-decoration: none;
       color: black;
+    }
+
+    .start-button {
+      margin-top: 15px;
+
+      color: #fe4e4e;
+      border-color: #fe4e4e;
     }
   }
 }
