--- a/src/components/LeaderCard/LeaderCard.scss
+++ b/src/components/LeaderCard/LeaderCard.scss
@@ -1,8 +1,6 @@
 .card {
-  width: 28%;
-  display: flex;
-  flex-direction: column;
   text-align: left;
+  padding: 2.75em !important;
 
   &-header {
     display: flex;
@@ -15,9 +13,58 @@
     }
   }
 
+  &-company {
+    font-weight: 700;
+    margin-bottom: 0;
+  }
+
+  &-detail {
+    &-title {
+      border-bottom: 0.5px solid grey;
+      position: relative;
+
+      .arrow:after {
+        content: "";
+        border: solid grey;
+        border-width: 0 3px 3px 0;
+        display: inline-block;
+        padding: 3px;
+        transform: rotate(45deg);
+        -webkit-transform: rotate(45deg);
+        position: absolute;
+        right: 0px;
+        top: 10px;
+        animation: transform 1s ease-in-out;
+      }
+
+      .active:after {
+        content: "";
+        border: solid grey;
+        border-width: 0 3px 3px 0;
+        display: inline-block;
+        padding: 3px;
+        transform: rotate(225deg);
+        -webkit-transform: rotate(225deg);
+        position: absolute;
+        right: 0px;
+        top: 10px;
+        animation: transform 1s ease-in-out;
+      }
+    }
+
+    .anilDetail {
+      padding-left: 15px;
+    }
+  }
+
   &-image {
     height: auto;
     width: 100%;
+
+    img {
+      height: auto !important;
+      width: 100%;
+    }
   }
 
   .detail-enter {
