--- a/src/sections/Intro/Intro.scss
+++ b/src/sections/Intro/Intro.scss
@@ -1,29 +1,17 @@
-@import "~include-media/dist/_include-media.scss";
-
 .Intro {
   width: 98%;
   margin: 0 auto;
 
   &-container {
-    height: 400px;
+    height: auto;
     background-color: #ff5b5a;
   }
 
   &-description {
-    width: 50%;
-    margin: auto;
-
-    @include media("<=tablet") {
-      width: 80%;
-    }
-
+    padding: 5% auto;
+    margin: 0 auto;
     img {
       width: 100px;
-      margin-top: 100px;
-
-      @include media("<=tablet") {
-        margin-top: 0px;
-      }
     }
     p {
       color: white;
