--- a/src/sections/Leaders/Leaders.scss
+++ b/src/sections/Leaders/Leaders.scss
@@ -1,10 +1,12 @@
+@import "~include-media/dist/_include-media.scss";
+
 .Leaders {
   width: 80%;
   margin: 50px auto;
 
   &-cards {
-    display: flex;
     justify-content: space-between;
+    margin-bottom: 50px;
   }
   &-logos {
     display: flex;
@@ -22,5 +24,11 @@
   &-description {
     width: 70%;
     margin: 50px auto;
+
+    @include media("<=tablet") {
+      width: 90%;
+      line-height: 1.75em;
+      margin: 20px auto;
+    }
   }
 }
