--- a/src/sections/Team/Team.scss
+++ b/src/sections/Team/Team.scss
@@ -1,3 +1,5 @@
+@import "~include-media/dist/_include-media.scss";
+
 .Team {
   width: 98%;
   margin: 50px auto;
@@ -10,7 +12,6 @@
     margin: 50px auto;
 
     &-cards {
-      display: flex;
       justify-content: space-between;
     }
     &-logos {
@@ -29,6 +30,12 @@
     &-description {
       width: 70%;
       margin: 50px auto;
+
+      @include media("<=tablet") {
+        width: 90%;
+        line-height: 1.75em;
+        margin: 20px auto;
+      }
     }
   }
 }
