--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,11 +1,39 @@
 .nav {
-  &-container {
+  &-bar {
+    position: fixed;
+    width: 100%;
+    margin: 0 auto;
     height: auto;
     background-color: white;
     justify-content: space-between;
+    &-menu {
+      padding-right: 5%;
+      a {
+        text-decoration: none;
+      }
+
+      .navbar-item:hover {
+        color: #fe4e4e;
+        background-color: transparent;
+      }
+
+      .start-button {
+        margin-top: 4px;
+
+        color: #fe4e4e;
+        border-color: #fe4e4e;
+      }
+
+      .start-button:hover {
+        background-color: #fafafa;
+      }
+    }
   }
 
   &-logo {
+    display: flex;
+    padding-left: 5%;
+
     a {
       height: auto;
     }
@@ -13,24 +41,19 @@
       padding-top: 20px;
       width: 100px;
     }
-  }
 
-  &-main {
-    display: flex;
-    flex-direction: row-reverse;
-    padding-right: 80px;
-    a {
-      margin-top: 30px;
-      margin-left: 30px;
-      text-decoration: none;
-      color: black;
+    .navbar-burger {
+      padding-right: 5%;
+      right: 5%;
+      border: none;
+      height: 3em;
+      width: 3em;
+      margin-top: 2%;
+      // height: 2.25em;
+      // width: 2.25em;
     }
-
-    .start-button {
-      margin-top: 15px;
-
-      color: #fe4e4e;
-      border-color: #fe4e4e;
+    .navbar-burger:active {
+      box-shadow: 0 0 0 0.125em rgba(255, 91, 90, 0.15);
     }
   }
 }
