--- a/src/sections/Home/Leaders/Leaders.scss
+++ b/src/sections/Home/Leaders/Leaders.scss
@@ -24,6 +24,7 @@
   &-description {
     width: 70%;
     margin: 50px auto;
+    text-align: center;
 
     @include media("<=tablet") {
       width: 90%;
