--- a/src/App.scss
+++ b/src/App.scss
@@ -22,6 +22,12 @@
   src: url("assets/fonts/DINNextLTPro-Bold.otf") format("opentype");
 }
 
+@font-face {
+  font-family: DIN Pro Heavy;
+  font-weight: heavy;
+  src: url("assets/fonts/DINNextLTPro-Heavy.otf") format("opentype");
+}
+
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
