--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -12,20 +12,29 @@
         text-decoration: none;
       }
 
+      .navbar-item {
+        color: #828388;
+        font-weight: 700;
+      }
+
       .navbar-item:hover {
-        color: #fe4e4e;
+        color: black;
         background-color: transparent;
+        transition: color 0.5s ease-in-out;
       }
 
       .start-button {
-        margin-top: 4px;
-
+        margin-top: 1rem;
+        margin-left: 1rem;
         color: #fe4e4e;
         border-color: #fe4e4e;
+        transition: background-color 0.5s ease-in-out;
       }
 
       .start-button:hover {
-        background-color: #fafafa;
+        background-color: #fe4e4e;
+        color: white;
+        transition: background-color 0.5s ease-in-out;
       }
     }
   }
@@ -38,17 +47,18 @@
       height: auto;
     }
     img {
-      padding-top: 20px;
+      padding-top: 2rem;
+      padding-bottom: 1rem;
       width: 100px;
     }
 
     .navbar-burger {
       padding-right: 5%;
-      right: 5%;
+      right: 2.5rem;
       border: none;
       height: 3em;
       width: 3em;
-      margin-top: 2%;
+      margin-top: 1.7rem;
       // height: 2.25em;
       // width: 2.25em;
     }
