--- a/src/App.scss
+++ b/src/App.scss
@@ -3,7 +3,7 @@
 @import "bulma/sass/grid/columns.sass";
 @import "bulma/sass/base/helpers.sass";
 @import "bulma/sass/elements/button.sass";
-// @import "bulma/sass/components/Navbar.sass";
+@import "bulma/sass/components/navbar.sass";
 
 .App {
   text-align: center;
