--- a/src/sections/Home/Difference/Difference.scss
+++ b/src/sections/Home/Difference/Difference.scss
@@ -5,6 +5,7 @@
   width: 98%;
   margin: 0 auto;
   flex-direction: column;
+  display: flex;
   &-detail-1 {
     width: 100%;
     margin: 0 auto;
