--- a/src/sections/Home/Leaders/Leaders.scss
+++ b/src/sections/Home/Leaders/Leaders.scss
@@ -14,6 +14,11 @@
     &-logo {
       width: 25%;
       height: auto;
+
+      @include media("<=tablet") {
+        width: 50%;
+      }
+
       img {
         height: 100%;
         width: 100%;
