--- a/src/sections/Home/Difference/Difference.scss
+++ b/src/sections/Home/Difference/Difference.scss
@@ -9,7 +9,7 @@
   &-detail-1 {
     width: 100%;
     margin: 0 auto;
-    height: auto;
+    height: 100vh;
     &-description {
       display: flex;
       justify-content: center;
